--- a/IdentityTestProject/IdentityTestProject.csproj
+++ b/IdentityTestProject/IdentityTestProject.csproj
@@ -164,6 +164,7 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-1.9.0.min.map" />
+    <Content Include="Views\Admin\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
